2008-06-10 14:06:34  Tim Janik  <timj@imendio.com>

	* gobject/tmpl/gtype.sgml: fixed documentation regarding type checking
	macros that do and do not issue warnings.

2008-05-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-docs.sgml:
	* gio/gio-docs.sgml: Add indexes of 2.18 additions

2008-05-27  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.0 ===

2008-05-27  Matthias Clasen  <mclasen@redhat.com>

	* glib/compiling.sgml: Document G_DISABLE_SINGLE_INCLUDES

2008-05-27  Michael Natterer  <mitch@gimp.org>

	* glib/tmpl/gurifuncs.sgml
	* glib/tmpl/testing.sgml: new files.

	* glib/tmpl/unicode.sgml
	* glib/tmpl/macros_misc.sgml
	* glib/tmpl/checksum.sgml: regenerated.

	* Updated lots of svn:ignore all over the place.

2008-05-27  Matthias Clasen  <mclasen@redhat.com>
	
	Bug 535021 – g_param_spec_internal documentation should 
	describe purpose of nick and blurb

	* gobject/tmpl/gparamspec.sgml: Explain nicks and blurbs
	some more.

2008-05-26  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-docs.sgml: Add 2.18 index

	* glib/glib-sections.txt: Add g_checksum_reset

2008-05-25  Matthias Clasen  <mclasen@redhat.com>

	* gobject/tmpl/gclosure.sgml: Fix docs for
	g_cclosure_marshal_STRING__OBJECT_POINTER. (#534177, Areg Beketovski)

2008-05-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 527214 – g_timer_elapsed() returns random values.

	* docs/reference/glib/tmpl/timers.sgml:
	Add notes regarding gthreads dependency. 
	Patch by Mathias Hasselmann

2008-05-17  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Add new api

2008-05-17  Matthias Clasen  <mclasen@redhat.com>

	Bug 528648 – Extra >s in Object Construction section...

	* gobject/tut_howto.xml: Fix a formatting glitch

2008-05-14  Tor Lillqvist  <tml@novell.com>

	* glib/tmpl/spawn.sgml: Don't mention fork()/exec() in the short
	description. fork()/exec() is an implementation detail on Unix.

2008-04-07  Matthias Clasen  <mclasen@redhat.com>
