@@ -633,6 +633,7 @@ g_themed_icon_new
 g_themed_icon_new_with_default_fallbacks
 g_themed_icon_new_from_names
 g_themed_icon_get_names
+g_themed_icon_prepend_name
 g_themed_icon_append_name
 #endif
 #endif
