@@ -48,12 +48,16 @@ typedef struct _GThemedIconClass   GThemedIconClass;
 
 GType g_themed_icon_get_type (void) G_GNUC_CONST;
   
-GIcon *g_themed_icon_new (const char *iconname);
-GIcon *g_themed_icon_new_with_default_fallbacks (const char *iconname);
-GIcon *g_themed_icon_new_from_names (char **iconnames, int len);
-void   g_themed_icon_append_name (GThemedIcon *icon, const char *iconname);
+GIcon *g_themed_icon_new                        (const char  *iconname);
+GIcon *g_themed_icon_new_with_default_fallbacks (const char  *iconname);
+GIcon *g_themed_icon_new_from_names             (char       **iconnames, 
+                                                 int          len);
+void   g_themed_icon_prepend_name               (GThemedIcon *icon, 
+                                                 const char  *iconname);
+void   g_themed_icon_append_name                (GThemedIcon *icon, 
+                                                 const char  *iconname);
 
-const char * const *g_themed_icon_get_names (GThemedIcon *icon);
+const char * const *g_themed_icon_get_names     (GThemedIcon *icon);
 
 G_END_DECLS
 
