@@ -1,3 +1,7 @@
+2008-06-10  Matthias Clasen  <mclasen@redhat.com>
+
+	* gio/gio-sections.txt: Add g_themed_icon_prepend_name
+
 2008-06-10 14:06:34  Tim Janik  <timj@imendio.com>
 
 	* gobject/tmpl/gtype.sgml: fixed documentation regarding type checking
